{{$NEXT}}
   - Implement basic PDF::ISO_32000_2 conformance (PDF 2.0
     specification) for existing classes.
   - Fix outline node construction

0.5.15  2024-01-20T09:49:22+13:00
   - Fix PDF::Filespec coercement

0.5.14  2023-08-21T07:45:41+12:00
   - Rename some t/ *.pm files to *.rakumod. Avoid deprecation warnings
   - Rework low-level t/pdf-pages.t tests; incompatible with latest pending
     PDF::Content release

0.5.13  2023-05-13T07:14:42+12:00
   - Make PDF::ISO_32000 a dependency. Apply roles to classes.

0.5.12  2023-04-06T06:25:08+12:00
   - Make NameTree and NumberTree accessors thread-safe

0.5.11  2022-12-28T12:55:03+13:00
   - fix /StructElem /C(class) definition
   - use unit form of classes and roles

0.5.10  2022-12-22T07:46:31+13:00
   - Regenerate 'Classes Quick Reference' in README.md
   - Make extensive use of 'also is' and 'also does' for class
     composition. This was needed for `make-quick-ref.raku` work
     reliably.

0.5.9  2022-12-20T10:12:51+13:00
   - Fix PDF::Tags::Reader regression

0.5.8  2022-12-20T09:47:06+13:00
   - Make Attribute /O entry :required (as per spec).
   - Add PDF::Attributes::{Layout|List|PrintField|Table|UserProperties}

0.5.7  2022-11-03T17:45:46+13:00
   - Add PDF::Signature byte-ranges() method
   - Improve field naming conformance in PDF::Field and field
     handling in pdf-fields.raku. Names should be of the form
     <parent>.<child> for nested form fields.

0.5.6  2022-09-04T06:04:03+12:00
   - Fix pdf-checker.raku for PDF::Content v0.6.3

0.5.5  2022-07-05T08:01:32+12:00
   - Fix PDF::Mask.TR (transfer-function) coercements
   - Fix PDF::Destination named destination and GoTo/GotoR page destination
     coercements
   - Make --list the default action in pdf-fields.raku
   - Fix pdf-checker.raku for PDF v0.5.8+

0.5.4  2022-06-09T14:33:45+12:00
   - Fix PDF::Field coerce-field() for compatibility with FDF::Field (FDF module)

0.5.3  2022-06-09T10:14:02+12:00
   - Fix script pdf-content-dump.raku